# mahjong-game

./: .gitignore  CMakeLists.txt  Makefile  README.md
mahjong_evaluator/: CMakeLists.txt
mahjong_evaluator/src/: CMakeLists.txt
mahjong_evaluator/tst/: CMakeLists.txt
src/: CMakeLists.txt
src/exercise/: CMakeLists.txt  exercise_1.c
src/html_ui/: CMakeLists.txt
src/mahjong_game/: CMakeLists.txt
tst/: CMakeLists.txt  fff.h  stub_user_data.h  test_exercise_1.cpp  test_exercise_2.cpp
